# lens-flare

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Readme.md
LensFlare/Headers/: controls.hpp  shader.hpp
LensFlare/Shaders/: blend.frag  blur.frag  lensflare.frag  pass.vert
LensFlare/Sources/: controls.cpp  main.cpp  shader.cpp
